--- a/src/Mzayad.AutoBidNotifier/packages.config
+++ b/src/Mzayad.AutoBidNotifier/packages.config
@@ -1,19 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.Azure.WebJobs" version="1.1.2" targetFramework="net45" />
-  <package id="Microsoft.Azure.WebJobs.Core" version="1.1.2" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.6.2" targetFramework="net45" />
-  <package id="Microsoft.Data.OData" version="5.6.2" targetFramework="net45" />
-  <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net45" />
-  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net45" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.WebJobs" version="1.1.2" targetFramework="net461" />
+  <package id="Microsoft.Azure.WebJobs.Core" version="1.1.2" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net461" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="OrangeJetpack.Base.Data" version="0.1.2" targetFramework="net461" />
-  <package id="OrangeJetpack.Localization" version="1.5.6" targetFramework="net45" />
-  <package id="OrangeJetpack.Services.Client" version="0.0.33" targetFramework="net45" />
-  <package id="System.Spatial" version="5.6.2" targetFramework="net45" />
-  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net45" />
+  <package id="OrangeJetpack.Localization" version="1.5.7" targetFramework="net461" />
+  <package id="OrangeJetpack.Services.Client" version="0.0.41" targetFramework="net461" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="5.0.2" targetFramework="net461" />
 </packages>
